# QNAPControl

./: LICENSE  README.md  pyproject.toml
src/QNAPControl/: __init__.py
